# iwisum

./: Character.py  Map.py  main.py  map.json  pyproject.toml
data/: map.json  testowy.json
src/: character.py  generation.py  maze.py  mouse.py  nn_maze_solver.py  rewards.py
