[tool.poetry]
name = "iwisum"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.5.2"
poethepoet = "^0.24.2"
pylint = "^3.0.2"
black = "^23.11.0"
isort = "^5.12.0"

[tool.poe.tasks]
lint = "pylint src"
fmt.shell = "isort . && black ."


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
